# ovpn-portal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.yaml  pyproject.toml
.github/workflows/: helm.yml
charts/ovpn-portal/: Chart.yaml  values.yaml
charts/ovpn-portal/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
fe/css/: package-lock.json  tailwind.config.js
fe/css/src/: tailwind.css
ovpn_portal/: __init__.py  config.py  helpers.py  idp.py  ovpn.py  pki.py  s3.py
ovpn_portal/config/: app.yml.example  vpn.yml.example
ovpn_portal/templates/: exchange.html  index.html  layout.html  openvpn.tpl  ovpn.tpl
ovpn_portal/views/: __init__.py  _pipes.py  main.py
